--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Kasa - Location d'appartements entre particuliers</title>
+    <meta name="description" content="Kasa : trouvez et louez facilement des appartements et maisons partout en France. Plateforme de location entre particuliers, simple, rapide et sécurisée." />
+    <meta name="keywords" content="kasa, location, appartement, maison, particulier, france, vacances, séjour, logement" />
+    <meta name="author" content="Kasa" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- Preload banner image for LCP optimization -->
+    <link rel="preload" as="image" href="/assets/banners/home-ban.png" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kasa.com/" />
+    <meta property="og:title" content="Kasa - Location d'appartements entre particuliers" />
+    <meta property="og:description" content="Kasa : trouvez et louez facilement des appartements et maisons partout en France. Plateforme de location entre particuliers, simple, rapide et sécurisée." />
+    <meta property="og:image" content="/og-image.jpg" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Kasa - Location d'appartements entre particuliers" />
+    <meta name="twitter:description" content="Kasa : trouvez et louez facilement des appartements et maisons partout en France. Plateforme de location entre particuliers, simple, rapide et sécurisée." />
+    <meta name="twitter:image" content="/og-image.jpg" />
   </head>
   <body>
     <div id="root"></div>
