--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Cache-Control" content="public, max-age=31536000" />
     <title>Kasa - Location d'appartements entre particuliers</title>
     <meta name="description" content="Kasa : trouvez et louez facilement des appartements et maisons partout en France. Plateforme de location entre particuliers, simple, rapide et sécurisée." />
     <meta name="keywords" content="kasa, location, appartement, maison, particulier, france, vacances, séjour, logement" />
     <meta name="author" content="Kasa" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- Preconnect et Preload Google Fonts Montserrat -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Preload banner image for LCP optimization -->
+    <link rel="preload" as="image" href="/src/assets/banners/home-banner.webp" type="image/webp" fetchpriority="high" />
+    <link rel="preload" as="image" href="/src/assets/banners/home-banner.webp" type="image/webp" media="(max-width: 600px)" />
+    <link rel="preload" as="image" href="/src/assets/banners/home-banner.webp" type="image/webp" media="(min-width: 601px) and (max-width: 900px)" />
+    <link rel="preload" as="image" href="/src/assets/banners/home-banner.webp" type="image/webp" media="(min-width: 901px)" />
    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
