--- a/index.html
+++ b/index.html
@@ -9,32 +9,32 @@
     <meta name="description" content="Kasa : trouvez et louez facilement des appartements et maisons partout en France. Plateforme de location entre particuliers, simple, rapide et sécurisée." />
     <meta name="keywords" content="kasa, location, appartement, maison, particulier, france, vacances, séjour, logement" />
     <meta name="author" content="Kasa" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Kasa/favicon.svg" />
     <!-- Preconnect et Preload Google Fonts Montserrat -->
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- Preload banner image for LCP optimization -->
-    <link rel="preload" as="image" href="./src/assets/banners/home-banner.webp" type="image/webp" fetchpriority="high" />
-    <link rel="preload" as="image" href="./src/assets/banners/home-banner.webp" type="image/webp" media="(max-width: 600px)" />
-    <link rel="preload" as="image" href="./src/assets/banners/home-banner.webp" type="image/webp" media="(min-width: 601px) and (max-width: 900px)" />
-    <link rel="preload" as="image" href="./src/assets/banners/home-banner.webp" type="image/webp" media="(min-width: 901px)" />
+    <link rel="preload" as="image" href="/Kasa/src/assets/banners/home-banner.webp" type="image/webp" fetchpriority="high" />
+    <link rel="preload" as="image" href="/Kasa/src/assets/banners/home-banner.webp" type="image/webp" media="(max-width: 600px)" />
+    <link rel="preload" as="image" href="/Kasa/src/assets/banners/home-banner.webp" type="image/webp" media="(min-width: 601px) and (max-width: 900px)" />
+    <link rel="preload" as="image" href="/Kasa/src/assets/banners/home-banner.webp" type="image/webp" media="(min-width: 901px)" />
    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://raphft.github.io/Kasa/" />
     <meta property="og:title" content="Kasa - Location d'appartements entre particuliers" />
     <meta property="og:description" content="Kasa : trouvez et louez facilement des appartements et maisons partout en France. Plateforme de location entre particuliers, simple, rapide et sécurisée." />
-    <meta property="og:image" content="./og-image.jpg" />
+    <meta property="og:image" content="/Kasa/og-image.jpg" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Kasa - Location d'appartements entre particuliers" />
     <meta name="twitter:description" content="Kasa : trouvez et louez facilement des appartements et maisons partout en France. Plateforme de location entre particuliers, simple, rapide et sécurisée." />
-    <meta name="twitter:image" content="./og-image.jpg" />
+    <meta name="twitter:image" content="/Kasa/og-image.jpg" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
